2019-10-10(3) KJO jQuery add

--- a/html/main.pug
+++ b/html/main.pug
@@ -7,7 +7,7 @@ html
         include ./layout/header.pug
         
         div This button
-        button(click="crawling()") Click
+        button(id="crawlling") Click
         div is Crawling the https://www.yna.co.kr/sports/all
         div(id="crawling-div")
 
